# face-recognition-system-ARM

./: .clang-format  .gitignore  CMakeLists .txt.bak  CMakeLists.txt  CONTRIBUTING.md  FindZMQ.cmake  README.md  command.cpp  command.hpp  compile_commands.json  dlib编译命令  lib7000.cmake  libYu.cmake  libalign.cmake  libcom.cmake  libelm.cmake  liblibzmq.cmake  libnew.cmake  libpico.cmake  libsrc.cmake  libzmq.cmake  make.cpp  make.hpp  pca.txt  target.txt  检测方法备注
5model-50people-W-b-beta/: b0.txt  b1.txt  b2.txt  b3.txt  b4.txt  beta0.txt  beta1.txt  beta2.txt  beta3.txt  beta4.txt
LDA/: LDA.cpp
Qt/build-server-Desktop-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  moc_predefs.h  server  ui_mainwindow.h
Qt/server/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.pro  test.cpp
Qt/zmq/: CMakeLists.txt  client.cpp  server.cpp  server.hpp
align/: CMakeLists.txt  align.cpp  align.hpp  libalign.cmake
command/: CMakeLists.txt  arm编译注意  command.cpp  command.hpp  libcom.cmake
dlib/: CMakeLists.txt  algs.h  assert.h  cmake  config.h  config.h.in  console_progress_indicator.h  dnn.h  geometry.h  optimization.h  python.h  random_forest.h  revision.h  revision.h.in  serialize.h  svm.h  test_for_odr_violations.h
dlib/all/: source.cpp
dlib/appveyor/: dtest.yml  dtest_vc2017.yml  examples.yml  python.yml
dlib/array/: array_kernel.h  array_kernel_abstract.h
dlib/array2d/: array2d_kernel.h  array2d_kernel_abstract.h  serialize_pixel_overloads.h
dlib/base64/: base64_kernel_1.cpp
dlib/bayes_utils/: bayes_utils.h
dlib/binary_search_tree/: binary_search_tree_kernel_1.h  binary_search_tree_kernel_2.h
dlib/bit_stream/: bit_stream_kernel_1.cpp
dlib/cmake_utils/: add_global_compiler_switch.cmake  check_if_avx_instructions_executable_on_host.cmake  check_if_neon_available.cmake  check_if_sse4_instructions_executable_on_host.cmake  dlib.pc.in  dlibConfig.cmake.in  find_blas.cmake  set_compiler_specific_options.cmake  use_cpp_11.cmake
dlib/cmd_line_parser/: cmd_line_parser_kernel_1.h
dlib/cpp_tokenizer/: cpp_tokenizer_kernel_1.h
dlib/cuda/: cpu_dlib.cpp  cpu_dlib.h  cuda_data_ptr.cpp  cuda_data_ptr.h  cuda_dlib.cu  cuda_dlib.h  cuda_utils.h  cudnn_dlibapi.cpp  cusolver_dlibapi.cu  gpu_data.cpp  tensor.h  tensor_abstract.h  tensor_tools.cpp  tensor_tools.h
dlib/disjoint_subsets/: disjoint_subsets.h  disjoint_subsets_abstract.h  disjoint_subsets_sized.h  disjoint_subsets_sized_abstract.h
dlib/dnn/: core.h  core_abstract.h  input.h  layers.h  layers_abstract.h  loss.h  loss_abstract.h  solvers.h  solvers_abstract.h  trainer.h
dlib/entropy_encoder/: entropy_encoder_kernel_1.cpp  entropy_encoder_kernel_2.cpp
dlib/filtering/: kalman_filter.cpp  kalman_filter.h  kalman_filter_abstract.h
dlib/general_hash/: murmur_hash3.h  murmur_hash3_abstract.h
dlib/geometry/: border_enumerator.h  border_enumerator_abstract.h  drectangle.h  drectangle_abstract.h  line.h  line_abstract.h  point_transforms.h  rectangle.h  rectangle_abstract.h  vector.h  vector_abstract.h
dlib/global_optimization/: find_max_global.h  find_max_global_abstract.h  global_function_search.cpp  global_function_search.h  global_function_search_abstract.h
dlib/gui_widgets/: base_widgets.cpp  base_widgets.h  base_widgets_abstract.h  fonts.cpp  widgets.cpp  widgets.h  widgets_abstract.h
dlib/hash_map/: hash_map_kernel_1.h
dlib/hash_set/: hash_set_kernel_1.h
dlib/hash_table/: hash_table_kernel_1.h  hash_table_kernel_2.h
dlib/image_keypoint/: binned_vector_feature_image.h  binned_vector_feature_image_abstract.h  fine_hog_image.h  fine_hog_image_abstract.h  hashed_feature_image.h  hashed_feature_image_abstract.h  hog.h  hog_abstract.h  nearest_neighbor_feature_image.h  nearest_neighbor_feature_image_abstract.h  poly_image.h  poly_image_abstract.h
dlib/image_loader/: image_loader.h  jpeg_loader.h  png_loader.h
dlib/image_processing/: generic_image.h  object_detector_abstract.h  scan_image.h  scan_image_abstract.h  shape_predictor_trainer.h  shape_predictor_trainer_abstract.h
dlib/image_saver/: image_saver.h
dlib/image_transforms/: assign_image_abstract.h  edge_detector.h  edge_detector_abstract.h  equalize_histogram.h  equalize_histogram_abstract.h  hough_transform.h  hough_transform_abstract.h  image_pyramid_abstract.h  interpolation.h  interpolation_abstract.h  label_connected_blobs.h  label_connected_blobs_abstract.h  morphological_operations.h  morphological_operations_abstract.h  segment_image.h  segment_image_abstract.h  thresholding.h  thresholding_abstract.h
dlib/interfaces/: enumerable.h  remover.h
dlib/java/: cmake_swig_jni  java_array.h  run_test.sh  swig_test.java
dlib/lzp_buffer/: lzp_buffer_kernel_1.h  (+2 more)
elm/: .CMakeLists.txt.kate-swp  CMakeCache.txt  CMakeLists.txt  ELM-test.cpp  ELM-test.h  ELM.cpp  ELM.hpp  Makefile  cmake_install.cmake  compile_commands.json  elm.cpp  elm.hpp  elm.hpp.gch  libelm.cmake  lrf.cpp  lrf.hpp  my.txt  new.cpp
elm-data-test/: CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  elm.cpp  elm.hpp  libelm.cmake  makefile
elm/dlib_build/: Makefile
exe/: CMakeLists.txt  final.cpp
include/: common.cpp  lib7000.cmake  rf.cpp
libzmq/: CMakeLists.txt  FindZMQ.cmake  libzmq .cpp  libzmq.hpp  libzmq.hpp.gch
libzmq /: CMakeLists.txt  libzmq.cpp
makefile/: make  make.cpp  makefile
native/: CMakeLists.cmake.txt  CMakeLists.txt  compile_commands.json  dlib人脸对齐.txt  libpico.cmake  makefile  test.cpp  test.hpp
native-dlib/: CMakeLists.txt  makefile  pico  test.cpp  test.hpp
native/dlib/: cmake
new/: CMakeLists.txt  libnew.cmake  new.cpp  new.hpp
none/: CMakeLists.txt  用来测试elm里面函数的
old_elm/: CMakeLists.txt  ELM-test.cpp  ELM-test.h
opencv_test/: CMakeLists.txt  elm.cpp
qtdemo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  ui_mainwindow.h  untitled.ui
src/: CMakeLists.txt  facedetectcnn-int8data.cpp  facedetectcnn-model.cpp  facedetectcnn.cpp  facedetectcnn.h
zmq/: CMakeLists.txt  FindZMQ.cmake  client.cpp  server.cpp
(+139 files in other folders)
